# bestie-bench

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bestie-bench.toml.example  pyproject.toml
fixtures/advice/: productivity.yaml
fixtures/empathy/: milestones.yaml  relationships.yaml
fixtures/tool_calling/: internet.yaml  journal.yaml  outfits.yaml  reminders.yaml  weather.yaml
src/bestie_bench/: __init__.py  cli.py  harness.py
src/bestie_bench/cases/: __init__.py  loader.py  models.py
src/bestie_bench/metrics/: __init__.py  advice.py  empathy.py  tool_calling.py
src/bestie_bench/models/: __init__.py  client.py
src/bestie_bench/reporters/: __init__.py  summary.py
src/bestie_bench/stubs/: __init__.py  registry.py
stubs/cancel_reminder/: not_found.json  success_multiple.json  success_single.json
stubs/get_journal_entries/: default.json  empty.json
stubs/get_reminders/: default.json  empty.json
stubs/get_weather/: Edinburgh.json  London.json  New York.json
stubs/internet_lookup/: default.json
stubs/schedule_event/: success.json
stubs/update_reminder/: success.json
tests/: test_harness.py
